samples/_failures_safe/1761613539_c68fb6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24a26ad2.c:188:1: error: expected identifier or ‘(’ at end of input
  188 | void
      | ^~~~
